2024-02-22T00:29:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7997535402 # 138
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-22
* notice: last 14d: unq all: 1 6
* notice: prev accum: outdated-unq outdated-all / unq all: 335 699 / 340 706
* notice: next accum: outdated-unq outdated-all / unq all: 336 701 / 340 707
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-02-07] / [2024-02-21]

2024-02-21T08:09:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7985860724 # 136
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-21
* notice: last 14d: unq all: 1 6
* notice: prev accum: outdated-unq outdated-all / unq all: 335 699 / 339 705
* notice: next accum: outdated-unq outdated-all / unq all: 335 699 / 340 706
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-02-07 2024-02-21]

2024-02-21T00:29:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7982032535 # 135
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-21
* notice: last 14d: unq all: 1 6
* notice: prev accum: outdated-unq outdated-all / unq all: 334 697 / 338 704
* notice: next accum: outdated-unq outdated-all / unq all: 335 699 / 339 705
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-02-06] / [2024-02-20]

2024-02-20T00:29:25Z: