@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-02-22T00:29:59Z",
+  "timestamp" : "2024-02-22T08:08:21Z",
   "count_outdated" : 701,
   "uniques_outdated" : 336,
-  "count" : 707,
-  "uniques" : 340,
+  "count" : 708,
+  "uniques" : 341,
   "clones" : [
     {
       "timestamp": "2024-02-08T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -37,6 +37,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
