@@ -1,3 +1,12 @@
+2024-02-22T08:08:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8001298438 # 139
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-22
+* notice: last 14d: unq all: 1 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 336 701 / 340 707
+* notice: next accum: outdated-unq outdated-all / unq all: 336 701 / 341 708
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-02-08 2024-02-22]
+
 2024-02-22T00:29:59Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7997535402 # 138
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-22
